src/tests/snapshots/gitu__tests__reset__reset_soft_prompt.snap
---
source: src/tests/reset.rs
expression: ctx.redact_buffer()
---
 * ba1a85d main add unwanted-file                                Author Name __ |
▌* b66a0bf origin/main add initial-file                          Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Soft reset to (default origin/main): › q█                                     |
styles_hash: e88667048e185e80
